--- a/styles/architect.css
+++ b/styles/architect.css
@@ -40,6 +40,10 @@
   border-radius: 10px;
   border: none;
 }
+main{
+  max-width: 1440;
+  margin: 0 auto;
+}
 /* Header Styles */
 
 /* Navbar Relative Styles */
@@ -88,19 +92,86 @@
     font-size: 1rem;
 }
 
+/*Team and Features Relatives Styles */
+.teams-image-container{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  margin-top: 100px;
+  margin-left: 50px;
+
+}
+.teams{
+align-items: center;
+margin: 0 auto;
+}
+.our-teams-features{
+  margin: 0 50px;
+  max-width: 540px;
+}
+.teams-features-title{
+  max-width: 300px;
+}
+#qu-list{
+  font-weight: 500px;
+  font-size: 2rem;
+}
+.our{
+  font-weight: 700px;
+  font-size: 2rem;
+}
+.Features{
+  font-weight: 700px;
+  font-size: 2rem;
+  color: #FF900E;
+}
+.team-features-description{
+  font-weight: 400px;
+  font-size: 1rem;
+  
+}
+
 /* Responsive media query */
 
 @media screen and (max-width: 576px) {
-  .navbar, .nav-menu{
+  .navbar, 
+  .nav-menu,
+  .teams{
     flex-direction: column;
     
   }
-
   .nav-menu-item{
     margin-bottom: 30px;
   
   }
   .banner-image{
     width: 100%;
+  }
+  .teams-image-container{
+    grid-template-columns: repeat(1, 1fr);
+    margin-left: 0px;
+  }
+}
+
+/* Medium Devices Responsive */
+@media screen and (min-width: 576px) and (max-width: 992px){
+  .teams{
+    flex-direction: column;
+  }
+  .primary-color{
+    margin: 0 auto;
+  }
+  .our-teams-features{
+   margin: 50px auto;
+  }
+  .teams-image-container{
+    margin-right: 40px;
+  }
+  .teams-features-title
+  {
+    margin-bottom: 20px;
+  }
+  .btn-primary{
+    margin-top: 20px;
   }
 }
